Improve disclamer contrast and correct aria label book test button

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -419,6 +419,10 @@ input[name='q']::placeholder {
     color: grey;
 }
 
+.disclamer-highlight {
+    color: blue;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
